Bug Fix, improvement
