# app/Http/Controllers/ApiController.php
@@ -17,6 +17,22 @@ class ApiController extends Controller
      *   tags={"Local Api"},
      *   summary="Get All Genres",
      *   security={{"Bearer":{}}},
+     *   @OA\Parameter(
+     *       name="perPage",
+     *       in="query",
+     *       required=false,
+     *       @OA\Schema(
+     *            type="number"
+     *       )
+     *    ),
+     *   @OA\Parameter(
+     *       name="page",
+     *       in="query",
+     *       required=false,
+     *       @OA\Schema(
+     *            type="number"
+     *       )
+     *    ),
      *   @OA\Response(
      *     response="200",
      *     description="Success",
@@ -32,8 +48,8 @@ class ApiController extends Controller
      * )
      */
 
-    public function localGenres(){
-       $genres = GenreModel::all();
+    public function localGenres(Request $request){
+       $genres = GenreModel::paginate(isset($request->perPage) ? $request->perPage : "1");
         if (!$genres){
             return response()->json([
                 "error" => "Not found on local server"
@@ -42,6 +58,59 @@ class ApiController extends Controller
 
         return response()->json([
             "genres" => $genres
+        ], 200);
+    }
+
+
+
+    /**
+     * @OA\Get(
+     *   path="/api/artists",
+     *   tags={"Local Api"},
+     *   summary="Get All Artist",
+     *   security={{"Bearer":{}}},
+     *   @OA\Parameter(
+     *       name="perPage",
+     *       in="query",
+     *       required=false,
+     *       @OA\Schema(
+     *            type="number"
+     *       )
+     *    ),
+     *   @OA\Parameter(
+     *       name="page",
+     *       in="query",
+     *       required=false,
+     *       @OA\Schema(
+     *            type="number"
+     *       )
+     *    ),
+     *   @OA\Response(
+     *     response="200",
+     *     description="Success",
+     *   ),
+     *   @OA\Response(
+     *     response="401",
+     *     description="Unauthorized",
+     *   ),
+     *   @OA\Response(
+     *     response="500",
+     *     description="Server Error",
+     *   ),
+     * )
+     */
+
+    public function localArtists(Request $request){
+        $artists = ArtistModel::paginate(isset($request->perPage) ? $request->perPage : "1");
+
+        if (!$artists or $artists->count() == 0){
+            return response()->json([
+                "error" => "Not found on local server"
+            ], 200);
+        }
+
+        return response()->json([
+            "artists" => $artists
         ], 200);
     }
 
@@ -107,6 +176,23 @@ class ApiController extends Controller
      *           type="string"
      *      )
      *   ),
+     *   @OA\Parameter(
+     *       name="perPage",
+     *       in="query",
+     *       required=false,
+     *       @OA\Schema(
+     *            type="string"
+     *       )
+     *    ),
+     *
+     *   @OA\Parameter(
+     *       name="page",
+     *       in="query",
+     *       required=false,
+     *       @OA\Schema(
+     *            type="string"
+     *       )
+     *    ),
      *   @OA\Response(
      *     response="200",
      *     description="Success",
@@ -125,7 +211,7 @@ class ApiController extends Controller
     public function localArtistAlbums(Request $request){
         $albums = AlbumModel::query()
             ->where(["artist_id" => $request->artistId])
-            ->get();
+            ->paginate(isset($request->perPage) ? $request->perPage : "1");
 
         if (!$albums){
             return response()->json([
@@ -155,6 +241,23 @@ class ApiController extends Controller
      *           type="string"
      *      )
      *   ),
+     *   @OA\Parameter(
+     *        name="perPage",
+     *        in="query",
+     *        required=false,
+     *        @OA\Schema(
+     *             type="string"
+     *        )
+     *     ),
+     *
+     *    @OA\Parameter(
+     *        name="page",
+     *        in="query",
+     *        required=false,
+     *        @OA\Schema(
+     *             type="string"
+     *        )
+     *     ),
      *   @OA\Response(
      *     response="200",
      *     description="Success",
@@ -173,9 +276,9 @@ class ApiController extends Controller
     public function getArtistTracks(Request $request){
         $tracks = TrackModel::query()
             ->where(["artist_id" => $request->artistId])
-            ->get();
+            ->paginate(isset($request->perPage) ? $request->perPage : "1");
 
-        if (!$tracks){
+        if (!$tracks or $tracks->count() == 0){
             return response()->json([
                 "error" => "Not found on local server"
             ], 404);
@@ -237,9 +340,99 @@ class ApiController extends Controller
             "album" => $album,
             "tracks"  => $tracks
         ], 200);
-
     }
 
 
+
+    /**
+     * @OA\Get(
+     *   path="/api/genre/albums",
+     *   tags={"Local Api"},
+     *   summary="Get Genre Albums",
+     *   description="Required => token, genreName",
+     *   security={{"Bearer":{}}},
+     *   @OA\Parameter(
+     *      name="genreName",
+     *      in="query",
+     *      required=true,
+     *      @OA\Schema(
+     *           type="string"
+     *      )
+     *   ),
+     *
+     *   @OA\Parameter(
+     *         name="perPage",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(
+     *              type="string"
+     *         )
+     *      ),
+     *
+     *     @OA\Parameter(
+     *         name="page",
+     *         in="query",
+     *         required=false,
+     *         @OA\Schema(
+     *              type="string"
+     *         )
+     *      ),
+     *   @OA\Response(
+     *     response="200",
+     *     description="Success",
+     *   ),
+     *   @OA\Response(
+     *     response="401",
+     *     description="Unauthorized",
+     *   ),
+     *   @OA\Response(
+     *     response="500",
+     *     description="Server Error",
+     *   ),
+     * )
+     */
+
+    public function localGenresAlbum(Request $request){
+
+        $genre = GenreModel::query()
+            ->where("name", $request->genreName)
+            ->first();
+
+        if (!$genre) {
+            return response()->json([
+                "error" => "Not found on local server"
+            ], 404);
+        }
+
+        $albumsQuery = $genre->genresArtist()
+            ->with('getAlbums')
+            ->get()
+            ->pluck('getAlbums')
+            ->flatten();
+
+        $perPage = $request->perPage;
+        $page = $request->query('page', 1);
+
+        $paginatedAlbums = $albumsQuery
+            ->slice(($page - 1) * $perPage, $perPage)
+            ->all();
+
+        $totalAlbums = count($albumsQuery);
+
+        return response()->json([
+            "success" => [
+                "data" => $paginatedAlbums,
+                "pagination" => [
+                    "current_page" => $page,
+                    "per_page" => $perPage,
+                    "total" => $totalAlbums,
+                    "last_page" => ceil($totalAlbums / $perPage),
+                ],
+            ]
+        ], 200);
+
+
+
+    }
 
 }
